--- a/apps/site/src/content/projects/only_kids.yaml
+++ b/apps/site/src/content/projects/only_kids.yaml
@@ -21,11 +21,7 @@ hero:
     src: '/src/assets/images/projects/only_kids/only_kids_hero.png'
     title: 'Banner do projeto Loja Virtual Only Kids'
     altText: 'Banner do projeto Loja Virtual Only Kids'
-# carousel:
-#     -
-# partners:
-#     -
-content: |
+description: |
     A **Loja Virtual Only Kids** foi desenvolvida para oferecer uma experiência de compra fluida e integrada, conectando o e-commerce às plataformas do Facebook, Instagram e ao sistema Bling ERP. O projeto foi criado com foco em automação, usabilidade e design alinhado à identidade da marca.
 
     Principais características:
