--- a/apps/site/src/content/projects/quase_calouro.yaml
+++ b/apps/site/src/content/projects/quase_calouro.yaml
@@ -19,11 +19,7 @@ hero:
     src: '/src/assets/images/projects/quasecalouro/quasecalouro_hero.png'
     title: 'Banner do projeto @quasecalouro'
     altText: 'Banner do projeto @quasecalouro'
-# carousel:
-#     -
-# partners:
-#     -
-content: |
+description: |
     A landing page **@quasecalouro** foi desenvolvida para capturar leads e oferecer uma plataforma rica em conteúdos exclusivos voltados para estudantes. O projeto foi criado com foco em usabilidade, design responsivo e conformidade com as melhores práticas de proteção de dados (LGPD).
 
     Principais características:
