--- a/apps/site/src/content/projects/fixe_eventos.yaml
+++ b/apps/site/src/content/projects/fixe_eventos.yaml
@@ -20,11 +20,7 @@ hero:
     src: '/src/assets/images/projects/fixe_eventos/fixe_eventos_hero_desktop.png'
     title: 'Banner do site Fixe Eventos'
     altText: 'Banner do site corporativo da Fixe Eventos'
-# carousel:
-#     -
-# partners:
-# - 'Fixe Eventos'
-content: |
+description: |
     O site corporativo da Fixe Eventos foi desenvolvido para destacar os serviços e a identidade visual da empresa no mercado de eventos. O projeto foi inteiramente construído em **Wordpress**, utilizando o design fornecido pela própria empresa como base.
 
     Durante o desenvolvimento, utilizamos o **Figma** para realizar pequenos ajustes no design, garantindo **acessibilidade**, **responsividade** e uma experiência de usuário otimizada.
