--- a/apps/site/src/content/projects/somnorte.yaml
+++ b/apps/site/src/content/projects/somnorte.yaml
@@ -19,11 +19,7 @@ hero:
     src: '/src/assets/images/projects/somnorte/somnorte_hero_desktop.png'
     title: 'Banner do site Somnorte'
     altText: 'Banner do site corporativo da Somnorte'
-# carousel:
-#     -
-# partners:
-#     - 'Somnorte'
-content: |
+description: |
     O site corporativo da **Somnorte** foi desenvolvido para estabelecer uma presença digital robusta e acessível globalmente. Construído com **Astro**, o site oferece performance otimizada e uma experiência de usuário fluida.
 
     A integração com **StaticCMS** permite que a equipe da Somnorte gerencie o conteúdo de forma autônoma e eficiente, garantindo que o site esteja sempre atualizado.
