feat: enhance ProductCard descriptions

--- a/apps/site/src/content/products/música.yaml
+++ b/apps/site/src/content/products/música.yaml
@@ -2,6 +2,6 @@ title: Sonoplastia, Áudio e Música
 draft: false
 summary: Imersão sonora sob medida.
 description: |
-    O som transforma o espaço em atmosfera.
+    O som **transforma o espaço**.
 
-    Produzimos trilhas, efeitos sonoros e paisagens sonoras que ampliam o impacto narrativo e emocional dos projetos. Atuamos desde a composição até a mixagem, com sensibilidade estética e domínio técnico.
+    Produzimos trilhas, efeitos sonoros e ambientações que causam o impacto narrativo e emocional dos projetos.
