--- a/apps/site/src/content/products/interatividade.yaml
+++ b/apps/site/src/content/products/interatividade.yaml
@@ -2,6 +2,6 @@ title: Soluções Interativas
 draft: false
 summary: Projetos que encantam pela experiência.
 description: |
-    Interagir é descobrir — e descobrir é memorável.
+    Interagir é descobrir - e **descobrir é memorável**.
 
-    Criamos experiências interativas para fins culturais, educacionais e promocionais. Utilizamos tecnologias como realidade aumentada, navegação jogável e visualizações em 3D para construir interfaces envolventes que conectam ideias e públicos.
+    Criamos experiências únicas para fins culturais, educacionais e promocionais.
