--- a/apps/site/src/content/products/jogos_e_gamificação.yaml
+++ b/apps/site/src/content/products/jogos_e_gamificação.yaml
@@ -2,4 +2,6 @@ title: Jogos e Gamificação
 draft: false
 summary: Magia e entretenimento em experiências jogáveis.
 description: |
-    Para dar forma a ideias por meio de mundos, história e interações, criamos jogos e sistemas gamificados que combinam narrativa, desafio e interatividade.
+    Transformamos ideias em **experiências inesquecíveis**.
+
+    Para dar forma a ideias por meio de mundos, histórias e interações, criamos jogos e sistemas gamificados.
