--- a/apps/site/src/content/products/sistemas_web_e_apps.yaml
+++ b/apps/site/src/content/products/sistemas_web_e_apps.yaml
@@ -2,6 +2,6 @@ title: Sistemas Web e Apps
 draft: false
 summary: Sites, plataformas e aplicativos que fazem mais do que informar.
 description: |
-    Toda interface é um universo — basta saber onde clicar.
+    Toda interface é **um novo universo**.
 
-    Desenvolvemos sistemas personalizados, apps e páginas com alto padrão visual e técnico. De landing pages a plataformas de gestão, entregamos soluções robustas com foco em performance, acessibilidade e usabilidade — para web ou dispositivos móveis.
+    Desenvolvemos sistemas personalizados, apps e páginas com alto padrão visual e técnico.
