fix: standardize capitalization and improve consistency in project descriptions and links

--- a/apps/site/src/content/projects/filtro_enade_2021.yaml
+++ b/apps/site/src/content/projects/filtro_enade_2021.yaml
@@ -27,8 +27,8 @@ description: |
 
     Desenvolvido no **Meta Spark** (antigo SparkAR), utilizando **JavaScript** para criar interações dinâmicas e responsivas.
 
-    - **Realidade Aumentada**: Criação de um ambiente imersivo e interativo.
-    - **Detecção de Piscar**: Uso de algoritmos para capturar movimentos faciais e traduzir em ações no jogo.
+    - **Realidade aumentada**: Criação de um ambiente imersivo e interativo.
+    - **Detecção de piscar**: Uso de algoritmos para capturar movimentos faciais e traduzir em ações no jogo.
     - **Gamificação**: Design de mecânicas de jogo para engajar e divertir os usuários.
     - **Otimização para Instagram**: Garantia de performance e compatibilidade com a plataforma.
 
