--- a/apps/site/src/content/projects/fixe_eventos.yaml
+++ b/apps/site/src/content/projects/fixe_eventos.yaml
@@ -27,9 +27,9 @@ description: |
 
     Principais características do projeto:
 
-    - **Design Personalizado**: Baseado no layout fornecido pela Fixe Eventos, com ajustes para atender às melhores práticas de usabilidade.
+    - **Design personalizado**: Baseado no layout fornecido pela Fixe Eventos, com ajustes para atender às melhores práticas de usabilidade.
     - **Acessibilidade**: Implementação de melhorias para tornar o site acessível a todos os usuários.
     - **Responsividade**: Garantia de uma experiência consistente em dispositivos móveis e desktops.
-    - **Gerenciamento de Conteúdo**: Totalmente gerenciável via Wordpress, permitindo que a equipe da Fixe Eventos atualize o site de forma simples e eficiente.
+    - **Gerenciamento de conteúdo**: Totalmente gerenciável via Wordpress, permitindo que a equipe da Fixe Eventos atualize o site de forma simples e eficiente.
 
     Este projeto reflete o compromisso da Space Wizard Studios em entregar soluções digitais que atendam às necessidades específicas de cada cliente.
