--- a/apps/site/src/content/projects/only_kids.yaml
+++ b/apps/site/src/content/projects/only_kids.yaml
@@ -26,11 +26,11 @@ description: |
 
     Principais características:
 
-    - **Experiência de Usuário (UI/UX)**: Navegação intuitiva e design responsivo para dispositivos móveis e desktops.
-    - **SEO e Captura de Leads**: Otimização para motores de busca e integração com plataformas de análise de dados.
-    - **Resgate de Carrinhos Abandonados**: Funcionalidade para recuperar vendas perdidas.
-    - **Criação de Ofertas e E-mails em Massa**: Ferramentas para campanhas promocionais.
-    - **Pagamento Facilitado**: Suporte a PIX e cartões de crédito.
-    - **Design Personalizado**: Desenvolvido com o Elementor, garantindo flexibilidade e alinhamento com a identidade visual da marca.
+    - **Experiência de usuário (UI/UX)**: Navegação intuitiva e design responsivo para dispositivos móveis e desktops.
+    - **SEO e captura de leads**: Otimização para motores de busca e integração com plataformas de análise de dados.
+    - **Resgate de carrinhos abandonados**: Funcionalidade para recuperar vendas perdidas.
+    - **Criação de ofertas e e-mails em massa**: Ferramentas para campanhas promocionais.
+    - **Pagamento facilitado**: Suporte a PIX e cartões de crédito.
+    - **Design personalizado**: Desenvolvido com o Elementor, garantindo flexibilidade e alinhamento com a identidade visual da marca.
 
     O projeto foi construído utilizando **Wordpress** e **Elementor**, garantindo uma solução robusta e fácil de gerenciar para a equipe da Only Kids.
