--- a/apps/site/src/content/projects/quase_calouro.yaml
+++ b/apps/site/src/content/projects/quase_calouro.yaml
@@ -24,10 +24,10 @@ description: |
 
     Principais características:
 
-    - **Cadastro em Newsletter**: Ferramenta para captar leads e manter os usuários informados.
+    - **Cadastro em newsletter**: Ferramenta para captar leads e manter os usuários informados.
     - **Boas práticas LGPD**: Garantia de conformidade com a legislação de proteção de dados.
     - **Animações em CSS**: Elementos visuais dinâmicos para melhorar a experiência do usuário.
-    - **Design Responsivo**: Compatibilidade com dispositivos móveis e desktops.
-    - **Simulado de Prova (ENADE)**: Funcionalidade interativa para engajar os estudantes.
+    - **Design responsivo**: Compatibilidade com dispositivos móveis e desktops.
+    - **Simulado de prova (ENADE)**: Funcionalidade interativa para engajar os estudantes.
 
     O projeto foi desenvolvido utilizando **Wordpress** e **Elementor**, garantindo uma solução flexível e fácil de gerenciar para o cliente.
