--- a/apps/site/src/content/projects/tavern_tale.yaml
+++ b/apps/site/src/content/projects/tavern_tale.yaml
@@ -21,13 +21,13 @@ date: '2023-09'
 partners:
     - 'Tavern Tale Studio'
 description: |
-    O site corporativo do **Tavern Tale Studio** foi desenvolvido para apresentar o portfólio e a identidade visual do estúdio de jogos. Construído inteiramente em **Wordpress** e utilizando o **Elementor** para personalizável visual, o site oferece uma plataforma robusta e fácil de gerenciar.
+    O site corporativo da **Tavern Tale Studio** foi desenvolvido para apresentar o portfólio e a identidade visual do estúdio de jogos. Construído inteiramente em **Wordpress** e utilizando o **Elementor** para criar o layout visual, o site oferece uma plataforma robusta, modular e fácil de gerenciar.
 
     Principais características:
 
-    - **Design Personalizado**: Interface visual alinhada com a marca e o universo dos jogos do estúdio.
-    - **Portfólio de Jogos**: Seção dedicada para apresentar os projetos desenvolvidos pelo Tavern Tale Studio.
-    - **Gerenciamento de Conteúdo**: Facilidade para a equipe do estúdio atualizar informações, notícias e projetos através do painel do Wordpress.
+    - **Design personalizado**: Interface visual alinhada com a marca e o universo dos jogos do estúdio.
+    - **Portfólio de jogos**: Seção dedicada para apresentar os projetos desenvolvidos pelo Tavern Tale Studio.
+    - **Gerenciamento de conteúdo**: Facilidade para a equipe do estúdio atualizar informações, notícias e projetos através do painel do Wordpress.
     - **Responsividade**: Experiência de usuário otimizada para visualização em desktops e dispositivos móveis.
 
     Este projeto foi desenvolvido pela **Space Wizard Studios** para fortalecer a presença online do Tavern Tale Studio.
