--- a/apps/site/src/content/projects/mathematical.yaml
+++ b/apps/site/src/content/projects/mathematical.yaml
@@ -27,10 +27,10 @@ description: |
 
     Principais características:
 
-    - **Desafio Progressivo**: Os níveis se tornam progressivamente mais complexos, mantendo o jogador engajado.
-    - **Naves e Efeitos Cosméticos**: Desbloqueie novas naves e personalizações visuais.
+    - **Desafio progressivo**: Os níveis se tornam progressivamente mais complexos, mantendo o jogador engajado.
+    - **Naves e efeitos cosméticos**: Desbloqueie novas naves e personalizações visuais.
     - **Multilíngua**: Disponível em Espanhol, Inglês, Francês e Português.
-    - **Controles Intuitivos**: Suporte a controles por toque e acelerômetro.
+    - **Controles intuitivos**: Suporte a controles por toque e acelerômetro.
     - **Plataformas**: Lançado inicialmente para Android e iOS.
 
     Desenvolvido utilizando a poderosa **Unity Engine**, o jogo combina gráficos vibrantes, jogabilidade fluida e uma experiência educativa única.
