--- a/apps/site/src/content/projects/trocando_saberes.yaml
+++ b/apps/site/src/content/projects/trocando_saberes.yaml
@@ -32,9 +32,9 @@ description: |
     Principais características:
 
     - **Acessibilidade**: Construído seguindo as melhores práticas para garantir o acesso a todos os usuários.
-    - **Seção de Projetos**: Espaço dedicado para apresentar projetos, permitindo anexar diversas mídias como **vídeos, imagens, áudios e arquivos**.
-    - **Seção de Notícias**: Área para divulgação de novidades e conteúdos relevantes para a comunidade.
-    - **Gerenciamento de Conteúdo**: Facilidade para a equipe do Trocando Saberes atualizar o site através do painel do Wordpress.
-    - **Design Responsivo**: Interface adaptada para diferentes tamanhos de tela.
+    - **Seção de projetos**: Espaço dedicado para apresentar projetos, permitindo anexar diversas mídias como **vídeos, imagens, áudios e arquivos**.
+    - **Seção de notícias**: Área para divulgação de novidades e conteúdos relevantes para a comunidade.
+    - **Gerenciamento de conteúdo**: Facilidade para a equipe do Trocando Saberes atualizar o site através do painel do Wordpress.
+    - **Design responsivo**: Interface adaptada para diferentes tamanhos de tela.
 
     Este projeto visa fortalecer a conexão entre pessoas e promover o acesso democrático ao conhecimento e à colaboração em projetos.
